styled navigation for laptop+ screen sizes. Working on alignment issues for mobile

--- a/src/Styles/2-Base/_global.scss
+++ b/src/Styles/2-Base/_global.scss
@@ -52,3 +52,7 @@ small,
 .text_small {
   font-size: 0.8rem;
 }
+
+.container {
+  max-width: 80%;
+}
